# pyproject.toml

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ImageTranslation"
version = "0.1.0"
description = "Flask Application"
authors = ["Arsh Bhushan"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
opencv-python = "^4.5.3"
numpy = "^1.20.3"
requests = "^2.26.0"
deep-translator = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
coverage = "^6.0.0"
# Add any other development dependencies you need for testing or development.
